test: created unit tests and webmvc test for productController